--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset = 'utf-8'>
         <meta http-equiv = 'X-UA-Compatible' content ='IE=edge'>
         <link rel="shortcut icon" href="images/coffeechocolate_removebg_preview_MCS_icon.ico" type='image/x-icon'/>
+        <meta property="og:image" href ="images/repository-open-graph-template.png">
         <title>Darwin Khay | My Website</title>
         <meta name ='viewport' content='width=device-width, intial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
